fix: hero font sizes on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -46,7 +46,7 @@ main .hero img {
 }
 
 main .hero h1 {
-  font-size: var(--heading-font-size-xl);
+  font-size: var(--heading-font-size-l);
   letter-spacing: 0.04em;
   font-weight: 300;
   line-height: 1.1;
@@ -55,6 +55,16 @@ main .hero h1 {
 
 main .hero p {
   margin-block-end: 3rem;
-  font-size: var(--body-font-size-l);
+  font-size: var(--body-font-size-m);
   line-height: 1.5;
+}
+
+@media(min-width: 600px) {
+  main .hero h1 {
+    font-size: var(--heading-font-size-xl);
+  }
+  
+  main .hero p {
+    font-size: var(--body-font-size-l);
+  }
 }
